@@ -2,14 +2,13 @@
 
 class CMS_Smarty_Template extends Smarty_Internal_Template
 {
-    public function fetch()
+    public function fetch($template = null, $cache_id = null, $compile_id = null, $parent = null)
     {
-        $args = func_get_args();
-        $class = get_class($this);
-        if( count($args) ) {
-            return call_user_func_array(array($this->smarty,'fetch'),$args);
+        // send an event before fetching...this allows us to change template stuff.
+        if( CmsApp::get_instance()->is_frontend_request() ) {
+            $parms = array('template'=>&$template,'cache_id'=>&$cache_id,'compile_id'=>&$compile_id,'display'=>&$display);
+            \CMSMS\HookManager::do_hook( 'Core::TemplatePrefetch', $parms );
         }
-        return parent::fetch();
+        return parent::fetch($template,$cache_id,$compile_id,$parent);
     }
 }
-?>
